--- a/0-index.html
+++ b/0-index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>task 0</title>
-  </head>
-
-  <body style="margin: 0; padding: 0; min-height: 100vh; display: flex; flex-direction: column">
-    <header style="background-color: #ff0000; height: 70px; width: 100%"></header>
-    <footer style="background-color: #00ff00; height: 60px; width: 100%; display: grid; place-content: center; margin-top: auto">
-      <div class="text">Best School</div>
-    </footer>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB_clone</title>
+</head>
+<body style="margin: 0; padding: 0;">
+	<header style="background-color: #FF0000;
+	height: 70px;width: 100%;"></header>
+	<footer style="background-color: #00FF00;
+	height: 60px; width: 100%; text-align: center;
+	line-height: 60px; position: absolute;
+	bottom: 0;">Best School</footer>
+</body>
 </html>
