--- a/1-index.html
+++ b/1-index.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>task 1</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      header {
-        background-color: #ff0000;
-        height: 70px;
-        width: 100%;
-      }
-
-      footer {
-        background-color: #00ff00;
-        height: 60px;
-        width: 100%;
-        display: grid;
-        place-content: center;
-        margin-top: auto;
-      }
-    </style>
-  </head>
-
-  <body>
-    <header></header>
-    <footer>
-      <div class="text">Best School</div>
-    </footer>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB_clone</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+		}
+		header {
+			background-color: #FF0000;
+			height: 70px;width: 100%;
+		}
+		footer {
+			background-color: #00FF00;
+			height: 60px;
+			width: 100%;
+			text-align: center;
+			line-height: 60px;
+			position: absolute;
+			bottom: 0;
+		}
+	</style>
+</head>
+<body>
+	<header></header>
+	<footer>Best School</footer>
+</body>
 </html>
