--- a/3-index.html
+++ b/3-index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
-    <title>task 3</title>
-    <link rel="stylesheet" href="styles/3-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-  </head>
-
-  <body>
-    <header></header>
-    <footer>
-      <div class="text">Best School</div>
-    </footer>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB_clone</title>
+	<link rel="icon" type="image/x-icon" href="images/icon.png">
+	<link rel="stylesheet" href="styles/3-common.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
+</head>
+<body>
+	<header>
+		<div class="logo" alt="AirBnB_clone_logo">
+	</header>
+	<footer>Best School</footer>
+</body>
 </html>
